--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(AIZO_project)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(AIZO_project main.cpp)
+add_executable(AIZO_project AiZO_project.cpp)
